external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.h

 /**
  * @fn void poroMAILx_LoadModels(void)
  * @brief load from MAILx and models
  *
  * @cond PYDOC
  * python usage : poroMAILx_LoadModels()
  * @endcond
  */
  extern "C" void poroMAILx_LoadModels(void);
 /**
  * @fn void poroMAILx_LoadBehaviours(void)
  * @brief load from bulk_behav
  *
  * @cond PYDOC
  * python usage : pordMAILx_LoadBehaviours()
  * @endcond
  */
  extern "C" void poroMAILx_LoadBehaviours(void);
  
   /**
  * @fn void poroMAILx_PushProperties(void)
  * @brief declares to models couple (model,behav)
  *
  * @cond PYDOC
  * python usage : poroMAILx_PushProperties()
  * @endcond
  */
  extern "C" void poroMAILx_PushProperties(void);
 /**
  * @fn void poroMAILx_ReadDrivenDof(void)
  * @brief Read DRV_DOF.DAT
  *
  * @cond PYDOC
  * python usage : poroMAILx_ReadDrivenDof()
  * @endcond
  */
  extern "C" void poroMAILx_ReadDrivenDof(void);
 /**
  * @fn void poroMAILx_WriteDrivenDof(void)
  * @brief Write DRV_DOF.OUT
  *
  * @cond PYDOC
  * python usage : poroMAILx_WriteDrivenDof()
  * @endcond
  */
  extern "C" void poroMAILx_WriteDrivenDof(void);
 /**
  * @fn void poroMAILx_ReadIniDof(int num=0)
  * @brief Read DOF.INI
  *
  * If num <= 0 : DATBOX/DOF.INI file is read
  *
  * Else : OUTBOX/DOF.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniDof
  * last call
  *
  * @cond PYDOC
  * python usage : poroMAILx_ReadIniDof(num=0)
  * @param[in] num (integer) : which DOF file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which DOF file to read
  * @endcond
  *
  */
  extern "C" void poroMAILx_ReadIniDof(int num=0);
 /**
  * @fn void poroMAILx_ReadIniMecaDof(int num=0)
  * @brief Read DOF file
  *
  * If num <= 0 : DATBOX/DOF.INI file is read
  *
  * Else : OUTBOX/DOF.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniMecaDof
  * last call
  *
  * @cond PYDOC
  * python usage : poroMAILx_ReadIniMecaDof(num=0)
  * @param[in] num (integer) : which DOF file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which DOF file to read
  * @endcond
  *
  */
  extern "C" void poroMAILx_ReadIniMecaDof(int num=0);
 /**
  * @fn void poroMAILx_ReadIniGPV(int num=0)
  * @brief Read GPV file
  *
  * If num <= 0 : DATBOX/GPV.INI file is read
  *
  * Else : OUTBOX/GPV.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniGPV
  * last call
  *
  * @cond PYDOC
  * python usage : poroMAILx_ReadIniGPV(num=0)
  * @param[in] num (integer) : which GPV file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which GPV file to read
  * @endcond
  *
  */
  extern "C" void poroMAILx_ReadIniGPV(int num=0);
 /**
  * @fn void poroMAILx_ReadIniMecaGPV(int num=0)
  * @brief Read GPV file
  *
  * If num <= 0 : DATBOX/GPV.INI file is read
  * Else : OUTBOX/GPV.OUT.num is read, num being
  * the parameter used in TimeEvolution_ReadIniMecaGPV
  * last call
  *
  * @cond PYDOC
  * python usage : poroMAILx_ReadIniMecaGPV(num=0)
  * @param[in] num (integer) : which GPV file to read
  * @endcond
  *
  * @cond CDOC
  * @param[in] num (int) : which GPV file to read
  * @endcond
  *
  */
  extern "C" void poroMAILx_ReadIniMecaGPV(int num=0);
 /**
  * @fn void poroMAILx_WriteLastDof(void)
  * @brief Write ascii DOF.LAST file
  *
  * @cond PYDOC
  * python usage : poroMAILx_WriteLastDof()
  * @endcond
  */
  extern "C" void poroMAILx_WriteLastDof(void);
 /**
  * @fn void poroMAILx_ComputeMass(void)
  * @brief compute elementary mass and inertia of bodies
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeMass()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeMass(void);
 /**
  * @fn void poroMAILx_ComputeFext(void)
  * @brief compute elementary external forces
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeFext()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeFext(void);
 /**
  * @fn void poroMAILx_ComputeBulk(void)
  * @brief compute elementary stiffness
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeBulk()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeBulk(void);
  /**
  * @fn void poroMAILx_ComputeDamping(void)
  * @brief compute elemenatry damping
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeDamping()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeDamping(void);
  
  /**
  * @fn void poroMAILx_AssembKT(void)
  * @brief assembles matrice
  *
  * @cond PYDOC
  * python usage : poroMAILx_AssembKT()
  * @endcond
  */
  extern "C" void poroMAILx_AssembKT(void);
  
  /**
  * @fn void poroMAILx_AssembRHS(void)
  * @brief assembles RHS
  *
  * @cond PYDOC
  * python usage : poroMAILx_AssembRHS()
  * @endcond
  */
  extern "C" void poroMAILx_AssembRHS(void);
  
   /**
  * @fn void poroMAILx_ComputeFreeVelocity(void)
  * @brief computes free motion (without contact contribution)
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeFreeVelocity()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeFreeVelocity(void);
  /**
  * @fn void poroMAILx_ComputeDof(void)
  * @brief computes motion (free + contact)
  *
  * @cond PYDOC
  * python usage : poroMAILx_ComputeDof()
  * @endcond
  */
  extern "C" void poroMAILx_ComputeDof(void);
  
  /**
  * @fn void poroMAILx_DisplayOutDof(void)
  * @brief Display body degrees of freedom
  *
  * @cond PYDOC
  * python usage : poroMAILx_DisplayOutDof()
  * @endcond
  */
  extern "C" void poroMAILx_DisplayOutDof(void);
  /**
  * @fn void poroMAILx_UpdateDof(void)
  * @brief update begin dof with current dof
  *
  * @cond PYDOC
  * python usage : poroMAILx_UpdateDof()
  * @endcond
  */
  extern "C" void poroMAILx_UpdateDof(void);
 

  /**
  * @fn void poroMAILx_UpdateBulk(void)
  * @brief update begin elementary fields with current elementary fields
  *
  * @cond PYDOC
  * python usage : poroMAILx_UpdateBulk(void)
  * @endcond
  */
  extern "C" void poroMAILx_UpdateBulk(void);