external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_poroMAILx.f90

!===========================================================================
!
! Copyright 2000-2025 CNRS-UM.
!
! This file is part of a software (LMGC90) which is a computer program 
! which purpose is to modelize interaction problems (contact, multi-Physics,etc).
!
! This software is governed by the CeCILL license under French law and
! abiding by the rules of distribution of free software.  You can  use, 
! modify and/ or redistribute the software under the terms of the CeCILL
! license as circulated by CEA, CNRS and INRIA at the following URL
! "http://www.cecill.info". 
!
! As a counterpart to the access to the source code and  rights to copy,
! modify and redistribute granted by the license, users are provided only
! with a limited warranty  and the software's author,  the holder of the
! economic rights,  and the successive licensors  have only  limited
! liability. 
!
! In this respect, the user's attention is drawn to the risks associated
! with loading,  using,  modifying and/or developing or reproducing the
! software by the user in light of its specific status of free software,
! that may mean  that it is complicated to manipulate,  and  that  also
! therefore means  that it is reserved for developers  and  experienced
! professionals having in-depth computer knowledge. Users are therefore
! encouraged to load and test the software's suitability as regards their
! requirements in conditions enabling the security of their systems and/or 
! data to be ensured and,  more generally, to use and operate it in the 
! same conditions as regards security. 
!
! The fact that you are presently reading this means that you have had
! knowledge of the CeCILL license and that you accept its terms.
!
! To report bugs, suggest enhancements, etc. to the Authors, contact
! Frederic Dubois.
!
! frederic.dubois@umontpellier.fr
!
!===========================================================================
MODULE wrap_poroMAILx                                       

  USE ISO_C_BINDING

  USE poroMAILx,ONLY:&
  
                load_models_poroMAILx, &
                update_existing_entities_poroMAILx, &
                load_behaviours_poroMAILx , &
                push_ppset_poroMAILx, &
                set_without_renum_poroMAILx,& 
                read_in_driven_dof_poroMAILx, &
                write_out_driven_dof_poroMAILx, &
                read_in_dof_poroMAILx, &
                read_in_meca_dof_poroMAILx, &
                read_in_gpv_poroMAILx, &
                read_in_meca_gpv_poroMAILx, &
                get_nb_poroMAILx, &
                write_xxx_dof_poroMAILx, &
                compute_mass_poroMAILx, &
                compute_Fext_poroMAILx, &
                compute_bulk_poroMAILx, &
                compute_damping_poroMAILx, &
                assemb_KT_poroMAILx, &
                assemb_RHS_poroMAILx, &
                compute_free_vlocy_poroMAILx, &
                compute_dof_poroMAILx, &
                write_xxx_dof_poroMAILx, &
                update_dof_poroMAILx, &
                update_bulk_poroMAILx, &
                compute_residue_norm_poroMAILx, &
                get_vector_poroMAILx, &
                get_N_NODE_poroMAILx, &
                get_nb_elements_poroMAILx, &
                increment_poroMAILx , &
                apply_drvdof_KT_poroMAILx, &
                set_Matrix_Storage_poroMAILx, &
                set_Matrix_Shape_poroMAILx, &
                get_meca_field_rank, get_ther_field_rank, &
                set_ther_field_bynode, set_ther_field_byelem, &
                set_meca_field_bynode, set_meca_field_byelem, &
                get_meca_vfield_rank, get_ther_vfield_rank, &
                set_ther_vfield_bynode, set_ther_vfield_byelem, &
                set_meca_vfield_bynode, set_meca_vfield_byelem, &
                load_ALE_poroMAILx, &
                put_vector_poroMAILx , &
                get_2DNodalStress_poroMAILx, &
                get_3DNodalStress_poroMAILx, &
                get_2DNodalStrain_poroMAILx, &
                get_3DNodalStrain_poroMAILx, &
                get_NodalGrad_poroMAILx    , &
                get_NodalFlux_poroMAILx    , &
                get_Internal_poroMAILx     , &
                compute_configurationTT_poroMAILx, &
                set_precon_body_poroMAILx, &
                compute_precon_W_poroMAILx, &
                get_coor_poroMAILx, &
                get_All_poroMAILx, &
                get_connectivity_poroMAILx, &
                set_vlocy_drvdof_poroMAILx, &
                Add_Field_Load_bynode_poroMAILx, &
                get_write_DOF_poroMAILx, &
                post_models_poroMAILx  , &
                clean_memory_poroMAILx, &
                check_properties_poroMAILx, &
                get_nb_gp_by_elem_poroMAILx
                


 
 use utilities, only: faterr,logmes

CONTAINS

!!!---------------------------------------------------
    SUBROUTINE LoadModels() bind(c, name='poroMAILx_LoadModels')
      IMPLICIT NONE

       CALL load_models_poroMAILx
       CALL update_existing_entities_poroMAILx
       
    END SUBROUTINE
    
    SUBROUTINE LoadBehaviours() bind(c, name='poroMAILx_LoadBehaviours')
      IMPLICIT NONE

       CALL load_behaviours_poroMAILx 

    END SUBROUTINE
    
    SUBROUTINE PushProperties() bind(c, name='poroMAILx_PushProperties')
      IMPLICIT NONE

       CALL push_ppset_poroMAILx

    END SUBROUTINE
    
    SUBROUTINE ReadDrivenDof() bind(c, name='poroMAILx_ReadDrivenDof')
      IMPLICIT NONE
       !! PURPOSE
       !!  read DRV_DOF.DAT file

       CALL read_in_driven_dof_poroMAILx

    END SUBROUTINE
    
    SUBROUTINE WriteDrivenDof() bind(c, name='poroMAILx_WriteDrivenDof')
      IMPLICIT NONE
       !! PURPOSE
       !!  write DRV_DOF.OUT file

       CALL write_out_driven_dof_poroMAILx

    END SUBROUTINE
    
    subroutine ReadIniDof(step) bind(c, name='poroMAILx_ReadIniDof')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_dof_poroMAILx(step)

    end subroutine

    subroutine ReadIniMecaDof(step) bind(c, name='poroMAILx_ReadIniMecaDof')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_meca_dof_poroMAILx(step)

    end subroutine

    subroutine ReadIniGPV(step) bind(c, name='poroMAILx_ReadIniGPV')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_gpv_poroMAILx(step)

    end subroutine

    subroutine ReadIniMecaGPV(step) bind(c, name='poroMAILx_ReadIniMecaGPV')
       implicit none
       integer(c_int), intent(in), value :: step

       call read_in_meca_gpv_poroMAILx(step)

    end subroutine

    SUBROUTINE WriteLastDof() bind(c, name='poroMAILx_WriteLastDof')
       IMPLICIT NONE
       INTEGER :: ifrom,ito
       !! PURPOSE
       !!  write ascii DOF.LAST file

          ifrom = 1  
          ito   = get_nb_poroMAILx()
          CALL write_xxx_dof_poroMAILx(2,ifrom,ito)

    END SUBROUTINE

    subroutine ComputeMass() bind(c, name='poroMAILx_ComputeMass')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp mass   ')
      call start_itimer(timer_id)

      call compute_mass_poroMAILx 

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeFext() bind(c, name='poroMAILx_ComputeFext')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp Fext   ')
      call start_itimer(timer_id)

      call compute_Fext_poroMAILx

      call stop_itimer(timer_id)

    end subroutine

    subroutine ComputeBulk() bind(c, name='poroMAILx_ComputeBulk')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp bulk   ')
      call start_itimer(timer_id)

      call compute_bulk_poroMAILx(0)

    end subroutine

    subroutine ComputeDamping() bind(c, name='poroMAILx_ComputeDamping')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp damp   ')
      call start_itimer(timer_id)

      call compute_damping_poroMAILx()

      call stop_itimer(timer_id)

    end subroutine
    
    subroutine AssembKT() bind(c, name='poroMAILx_AssembKT')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] assemb KT   ')
      call start_itimer(timer_id)

      call assemb_KT_poroMAILx
      call apply_drvdof_KT_poroMAILx

      call stop_itimer(timer_id)

    end subroutine
    
    subroutine AssembRHS() bind(c, name='poroMAILx_AssembRHS')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] assemb RHS  ')
      call start_itimer(timer_id)

      call assemb_RHS_poroMAILx

      call stop_itimer(timer_id)

    end subroutine
    
    subroutine ComputeFreeVelocity() bind(c, name='poroMAILx_ComputeFreeVelocity')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp Free V ')
      call start_itimer(timer_id)

      call compute_free_vlocy_poroMAILx 

      call stop_itimer(timer_id)

    end subroutine
    
    
    subroutine ComputeDof() bind(c, name='poroMAILx_ComputeDof')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] comp dof    ')
      call start_itimer(timer_id)

      call compute_dof_poroMAILx 

      call stop_itimer(timer_id)

    end subroutine
    
    subroutine DisplayOutDof() bind(c, name='poroMAILx_DisplayOutDof')
      implicit none
      integer(kind=4) :: ifrom,ito

      ifrom = 1  
      ito   = get_nb_poroMAILx()
      call write_xxx_dof_poroMAILx(6,ifrom,ito)

    end subroutine

    subroutine UpdateDof() bind(c, name='poroMAILx_UpdateDof')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] update dof  ')
      call start_itimer(timer_id)

      call update_dof_poroMAILx 

      call stop_itimer(timer_id)

    end subroutine

    subroutine UpdateBulk() bind(c, name='poroMAILx_UpdateBulk')
      use timer
      implicit none
      integer(kind=4), save :: timer_id = 0

      if( get_nb_poroMAILx() < 1 ) return

                                                       !12345678901234567890
      if( timer_id == 0 ) timer_id = get_new_itimer_ID('[poroM] update bulk ')
      call start_itimer(timer_id)

      call compute_bulk_poroMAILx(1)
      call update_bulk_poroMAILx 
